# InformatiqueGraphique

./: CMakeLists.txt  Makefile  README.md  data_points.txt  imgui.ini
IgProjet/: Objectif.md  TODO.md
IgProjet/.obsidian/: workspace.json
includes/GLFW/: glfw3.h
includes/backends/: imgui_impl_glfw.cpp
shaders/: animation_shader.fs  animation_shader.vs  main.fs  main.vs  quad.fs  quad.vs  spot_light.fs  spot_light.vs  test_depth.vs
src/: 2.1.basic_lighting.fs  2.1.basic_lighting.vs  bezier  bezier.cpp  bezier.h  include.h  main.cpp  menu.cpp  menu.h  ray.cpp  ray.h  shadowmap.cpp  shadowmap.h  sphere.cpp  sphere.h  utils.cpp  utils.h
src/animation/: Animation.cpp  Animation.h  Bone.h
src/core/: Application.cpp  Application.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  ShadowMapping.cpp  ShadowMapping.h  menu.cpp  menu.h
src/manager/: TextureManager.cpp  TextureManager.h
src/objects/: Cylinder.cpp  Cylinder.h  Parallelepiped.cpp  Parallelepiped.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h  bezier.cpp  bezier.h  parallepipede.cpp  parallepipede.h  ray.h  sphere.cpp  sphere.h
src/shaders/: 2.1.basic_lighting.fs  depth.fs  depth.vs  main.fs  main.vs
src/utils/: utils.cpp  utils.h
tests/: test.cpp
